--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
+VITE_API_BASE_URL = http://localhost:7000
+
 VITE_AUTH0_DOMAIN=dev-sz45ie0a6uoyxhx2.us.auth0.com
 VITE_AUTH0_CLIENT_ID=q9mzP2Ep3BRAenF73t5maYElXvzoAgTE
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
