added validate token

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 MONGODB_CONNECTION_STRING = mongodb://localhost:27017/food-order
+
+#AUTH
+AUTH0_AUDIENCE = mern-food-ordering-app-api
+AUTH0_ISSUER_BASE_URL = https://dev-sz45ie0a6uoyxhx2.us.auth0.com/
